# sancus-core-old

./: LICENSE  Makefile.am  README  autogen.sh  configure.ac  sancus-core.pc.in
include/: Makefile.am  Makefile.am.sh  sancus.h  sancus_common.h  sancus_fd.h  sancus_list.h  sancus_log.h  sancus_server.h  sancus_signal.h  sancus_socket.h  sancus_state.h
src/: Makefile.am  Makefile.am.sh  ev.c  log.c  sancus.c  sancus.h  security.c  server.c  server_connection.c  server_connection.h  server_port.c  server_port.h  signal.c  socket.c  state.c
src/ev/: common.h
